Add the User administration API (#15)
* Add the User administration API

* Reset permission cache before seeding
